feat: alterando modal

--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -13,7 +13,7 @@
           </ul>
           <ul>
             <li><strong>Crianças</strong></li>
-            <li>(2 a 11 anos)</li>
+            <li>(Entre 2 e 11 anos)</li>
             <li>
                  <app-botao-controle operacao="decrementar"></app-botao-controle>
                  <span>0</span>
