--- a/src/app/shared/card-busca/card-busca.component.html
+++ b/src/app/shared/card-busca/card-busca.component.html
@@ -1,10 +1,12 @@
 <mat-card class="card-busca" appearance="outlined">
     <img mat-card-image 
-    src="../../../assets/imagens/Veneza.png" alt="Imagem de Veneza">
+      [src]="promocao.imagem"
+      [alt]="'Imagem de ' + promocao.destino"
+    >
     <mat-card-content>
         <ul>
-            <li>Veneza</li>
-            <ul>R$ 500,00</ul>
+            <li>{{ promocao.destino }}</li>
+            <ul>R$ {{ promocao.preco }},00</ul>
         </ul>
     </mat-card-content>
     <mat-card-actions>
