--- a/src/app/shared/card-busca/card-busca.component.scss
+++ b/src/app/shared/card-busca/card-busca.component.scss
@@ -9,6 +9,10 @@
     ul {
       list-style: none;
       padding: 0;
+      text-align: center;
+      font-weight: 500;
+      font-size: 16px;
+
       li {
         margin: 12px;
         font-weight: 400;
