--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,38 +1,50 @@
 <section class="modal">
-<h1 mat-dialog-title>Viajante</h1>
-<mat-dialog-content>
+  <h1 mat-dialog-title>Viajante</h1>
+  <mat-dialog-content>
     <div class="selecao-idade">
-        <ul>
-            <li><strong>Adultos</strong></li>
-            <li>(Acima de 12 anos)</li>
-            <li>
-                 <app-botao-controle operacao="decrementar"></app-botao-controle>
-                 <span>1</span>
-                 <app-botao-controle operacao="incrementar"></app-botao-controle>
-            </li>
-          </ul>
-          <ul>
-            <li><strong>Crianças</strong></li>
-            <li>(Entre 2 e 11 anos)</li>
-            <li>
-                 <app-botao-controle operacao="decrementar"></app-botao-controle>
-                 <span>0</span>
-                 <app-botao-controle operacao="incrementar"></app-botao-controle>
-            </li>
-          </ul>
-          <ul>
-            <li><strong>Bebês</strong></li>
-            <li>(até 2 anos)</li>
-            <li>
-                 <app-botao-controle operacao="decrementar"></app-botao-controle>
-                 <span>0</span>
-                 <app-botao-controle operacao="incrementar"></app-botao-controle>
-            </li>
-          </ul>
-          
+      <ul>
+        <li><strong>Adultos</strong></li>
+        <li>(Acima de 12 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>1</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
+      <ul>
+        <li><strong>Crianças</strong></li>
+        <li>(Entre 2 e 11 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>0</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
+      <ul>
+        <li><strong>Bebês</strong></li>
+        <li>(até 2 anos)</li>
+        <li>
+          <app-botao-controle operacao="decrementar"></app-botao-controle>
+          <span>0</span>
+          <app-botao-controle operacao="incrementar"></app-botao-controle>
+        </li>
+      </ul>
     </div>
-</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-</mat-dialog-actions>
+    <div class="selecao-categoria">
+      <p><strong>Categoria</strong></p>
+      <mat-chip-listbox aria-label="Seleção de passagens">
+        <mat-chip-option value="Econômica" [selected]="formBuscaService.formBusca.get('tipo')?.value === 'Econômica'"
+        (selectionChange)="formBuscaService.alterarTipo($event, 'Econômica')">
+          Econômica
+        </mat-chip-option>
+        <mat-chip-option value="Executiva" [selected]="formBuscaService.formBusca.get('tipo')?.value === 'Executiva'"
+        (selectionChange)="formBuscaService.alterarTipo($event, 'Executiva')">
+          Executiva
+        </mat-chip-option>
+      </mat-chip-listbox>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button mat-button mat-dialog-close>Close</button>
+  </mat-dialog-actions>
 </section>
