--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -2,34 +2,10 @@
   <h1 mat-dialog-title>Viajante</h1>
   <mat-dialog-content>
     <div class="selecao-idade">
-      <ul>
-        <li><strong>Adultos</strong></li>
-        <li>(Acima de 12 anos)</li>
-        <li>
-          <app-botao-controle operacao="decrementar"></app-botao-controle>
-          <span>1</span>
-          <app-botao-controle operacao="incrementar"></app-botao-controle>
-        </li>
-      </ul>
-      <ul>
-        <li><strong>Crianças</strong></li>
-        <li>(Entre 2 e 11 anos)</li>
-        <li>
-          <app-botao-controle operacao="decrementar"></app-botao-controle>
-          <span>0</span>
-          <app-botao-controle operacao="incrementar"></app-botao-controle>
-        </li>
-      </ul>
-      <ul>
-        <li><strong>Bebês</strong></li>
-        <li>(até 2 anos)</li>
-        <li>
-          <app-botao-controle operacao="decrementar"></app-botao-controle>
-          <span>0</span>
-          <app-botao-controle operacao="incrementar"></app-botao-controle>
-        </li>
-      </ul>
-    </div>
+      <app-seletor-passageiro [formControl]="formBuscaService.obterControle('adultos')" titulo="Adultos" subtitulo="(Acima de 12 anos)"></app-seletor-passageiro>
+      <app-seletor-passageiro [formControl]="formBuscaService.obterControle('criancas')" titulo="Criança" subtitulo="(Entre 2 a 11 anos)"></app-seletor-passageiro>
+      <app-seletor-passageiro [formControl]="formBuscaService.obterControle('bebes')" titulo="Bebês" subtitulo="(Até 2 anos)"></app-seletor-passageiro>
+  </div>
     <div class="selecao-categoria">
       <p><strong>Categoria</strong></p>
       <mat-chip-listbox aria-label="Seleção de passagens">
