--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,7 +36,7 @@
                 </mat-card-content>
 
                 <mat-card-actions>
-                    <button (click)="login()" mat-flat-button color="primary">
+                    <button [disabled]="loginForm.invalid" (click)="login()" mat-flat-button color="primary">
                         ACESSAR MINHA CONTA
                     </button>
                 </mat-card-actions>
