--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -4,11 +4,9 @@
     <div class="flex-container">
       <mat-button-toggle-group aria-label="Tipo de passagem" formControlName="somenteIda">
         <mat-button-toggle [value]="false">
-          <mat-icon *ngIf="!formBuscaService.formBusca.get('somenteIda')?.value">check</mat-icon>
           IDA E VOLTA
         </mat-button-toggle>
         <mat-button-toggle [value]="true">
-          <mat-icon *ngIf="formBuscaService.formBusca.get('somenteIda')?.value">check</mat-icon>
           SOMENTE IDA
         </mat-button-toggle>
       </mat-button-toggle-group>
@@ -24,13 +22,17 @@
       </mat-chip>
     </div>
     <div class="flex-container">
-      <app-dropdown-uf label="Origem" iconePrefixo="flight_takeoff"
-        [control]="formBuscaService.obterControle('origem')" />
+      <div class="drop-container">
+        <app-dropdown-uf label="Origem" iconePrefixo="flight_takeoff"
+          [control]="formBuscaService.obterControle('origem')" placeholder="Origem" />
+      </div>
       <button mat-icon-button (click)="formBuscaService.trocarOrigemDestino()">
         <mat-icon>sync_alt</mat-icon>
       </button>
-      <app-dropdown-uf label="Destino" iconePrefixo="flight_land"
-        [control]="formBuscaService.obterControle('destino')" />
+      <div class="drop-container">
+        <app-dropdown-uf label="Destino" iconePrefixo="flight_land"
+          [control]="formBuscaService.obterControle('destino')" placeholder="Destino" />
+      </div>
       <mat-form-field class="input-container" appearance="outline">
         <mat-label>Data de ida</mat-label>
         <input matInput [matDatepicker]="ida">
